Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "25 năm xa xứ, nhạc sĩ Vũ Quang Trung trở lại kể chuyện bằng âm nhạc",
+    "content": "Nhạc sĩ Vũ Quang Trung đã trở về quê hương Hà Nội sau 25 năm xa xứ và tổ chức đêm nhạc \"Trở về bến mơ\" vào tối 12/3. Sự kiện không chỉ là một buổi biểu diễn mà còn là một hành trình hồi tưởng, nơi khán giả được thưởng thức những bản nhạc nổi tiếng của ông được phối lại một cách tinh tế. Đêm nhạc có sự tham gia của nhiều nghệ sĩ nổi tiếng và mang lại nhiều cảm xúc cho cả khán giả và nhạc sĩ. Đây là cột mốc quan trọng trong sự nghiệp của ông và là dịp gặp gỡ những người yêu mến âm nhạc của ông trong nhiều năm qua.",
+    "link": "https://dantri.com.vn/giai-tri/25-nam-xa-xu-nhac-si-vu-quang-trung-tro-lai-ke-chuyen-bang-am-nhac-20250313084004395.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nhạc sĩ Vũ Quang Trung đã trở lại Việt Nam sau bao nhiêu năm xa xứ?",
+    "answers": [
+      {
+        "text": "25 năm",
+        "correct": true
+      },
+      {
+        "text": "20 năm",
+        "correct": false
+      },
+      {
+        "text": "15 năm",
+        "correct": false
+      },
+      {
+        "text": "30 năm",
+        "correct": false
+      },
+      {
+        "text": "10 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ukraine đặt mục tiêu sản xuất 4,5 triệu UAV: Cuộc đua sống còn với Nga",
     "content": "Ukraine đang đặt mục tiêu sản xuất 4,5 triệu UAV vào năm 2025 nhằm đối phó với quân đội Nga, vốn đang có ưu thế hơn về số lượng và công nghệ. Tổng thống Volodymyr Zelensky khẳng định Ukraine hiện là quốc gia dẫn đầu trong chiến tranh UAV. Sự phát triển này không chỉ nhằm tự vệ mà còn giúp Ukraine giảm bớt phụ thuộc vào viện trợ quân sự từ các đồng minh như Mỹ. Việc sản xuất UAV trở thành chiến lược sống còn trong bối cảnh chiến sự leo thang.",
     "link": "https://dantri.com.vn/the-gioi/ukraine-dat-muc-tieu-san-xuat-45-trieu-uav-cuoc-dua-song-con-voi-nga-20250313080649498.htm",
@@ -1827,6 +1858,33 @@
     ]
   },
   {
+    "title": "Người bệnh suy giáp nên giảm cân thế nào",
+    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
+    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
+    "answers": [
+      {
+        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ ăn thịt đỏ.",
+        "correct": false
+      },
+      {
+        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau quả hoàn toàn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 năm vô sinh do không có tinh trùng",
     "content": "Anh Yeo, 51 tuổi, đã trải qua 9 năm vô sinh do không có tinh trùng và mới phát hiện nguyên nhân sau khi kết hôn. Sau khi khám tại Bệnh viện Đa khoa Tâm Anh TP HCM, anh được chẩn đoán với tình trạng teo tinh hoàn và được bác sĩ chỉ định điều trị bằng kỹ thuật micro-TESE để tìm tinh trùng. Kết quả là tìm thấy 15 tinh trùng, giúp anh và vợ thực hiện thụ tinh trong ống nghiệm và hiện tại họ đã có thai khoảng 8 tuần.",
     "link": "https://vnexpress.net/9-nam-vo-sinh-do-khong-co-tinh-trung-4860218.html",
@@ -1853,33 +1911,6 @@
       },
       {
         "text": "Vấn đề tâm lý",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người bệnh suy giáp nên giảm cân thế nào",
-    "content": "Người bệnh suy giáp có thể giảm cân bằng cách tăng cường chất xơ, ưu tiên ăn nhiều trái cây và chọn protein cùng chất béo lành mạnh. Suy giáp làm chậm quá trình trao đổi chất, khiến việc giảm cân trở nên khó khăn hơn. Bổ sung chất xơ và rau quả không chỉ hỗ trợ giảm cân mà còn giúp duy trì sức khỏe tuyến giáp. Thêm vào đó, tập thể dục thường xuyên, ngủ đủ giấc và ăn uống lành mạnh đóng vai trò quan trọng trong quá trình giảm cân của người bệnh.",
-    "link": "https://vnexpress.net/nguoi-benh-suy-giap-nen-giam-can-the-nao-4860368.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bệnh suy giáp nên giảm cân bằng cách nào?",
-    "answers": [
-      {
-        "text": "Tăng cường chất xơ và ăn nhiều trái cây.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ ăn thịt đỏ.",
-        "correct": false
-      },
-      {
-        "text": "Ngủ ít hơn 7 tiếng mỗi đêm.",
-        "correct": false
-      },
-      {
-        "text": "Tránh ăn rau quả hoàn toàn.",
         "correct": false
       }
     ]
@@ -3516,33 +3547,6 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
     "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
     "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
@@ -3565,6 +3569,33 @@
       },
       {
         "text": "Protein, selen, vitamin B9",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -4558,33 +4589,6 @@
       },
       {
         "text": "Vì trang phục quá đơn giản.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "WHO 'thắt lưng buộc bụng' sau khi Mỹ rút lui",
-    "content": "Tổ chức Y tế Thế giới (WHO) đang thực hiện cắt giảm chi phí và tối ưu hóa nguồn lực sau khi Mỹ, nhà tài trợ lớn nhất, rút khỏi tổ chức vào tháng 1. WHO đã bắt đầu xác định các hạng mục ưu tiên và giới hạn hợp đồng nhân viên trong một năm để duy trì hoạt động. Mặc dù tổ chức này chưa thông báo về việc cắt giảm nhân sự, nhưng một số quyết định khó khăn có thể là không thể tránh khỏi do thiếu hụt ngân sách.",
-    "link": "https://vnexpress.net/who-that-lung-buoc-bung-sau-khi-my-rut-lui-4860201.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "WHO đã làm gì sau khi Mỹ rút lui?",
-    "answers": [
-      {
-        "text": "Cắt giảm chi phí và tối ưu hóa nguồn lực.",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng quy mô nhân sự.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường tài trợ từ các nước khác.",
-        "correct": false
-      },
-      {
-        "text": "Ngừng tất cả các hoạt động của tổ chức.",
         "correct": false
       }
     ]
