Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bị lừa 5 tỉ đồng vì làm cộng tác viên chốt đơn hàng online",
+    "content": "Một phụ nữ ở Hà Nội đã bị lừa 5 tỉ đồng khi tham gia làm cộng tác viên chốt đơn hàng online. Sau khi được một người đàn ông từ TP.HCM rủ tham gia để nhận 'hoa hồng', chị đã chuyển tiền để làm nhiệm vụ nhưng không thể rút lại và phát hiện mình đã bị lừa. Cơ quan công an Hà Nội khuyến cáo người dân cần cẩn trọng với các hình thức làm cộng tác viên online và kiểm tra thông tin rõ ràng trước khi tham gia.",
+    "link": "https://tuoitre.vn/bi-lua-5-ti-dong-vi-lam-cong-tac-vien-chot-don-hang-online-2025031309552476.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao chị H. bị lừa 5 tỉ đồng?",
+    "answers": [
+      {
+        "text": "Vì tham gia làm cộng tác viên chốt đơn hàng online",
+        "correct": true
+      },
+      {
+        "text": "Vì chị H. không biết cách kiểm tra thông tin",
+        "correct": false
+      },
+      {
+        "text": "Vì có người quen rủ tham gia",
+        "correct": false
+      },
+      {
+        "text": "Vì chị H. đầu tư vào một công ty không rõ ràng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đề xuất làm công viên điện ảnh Thủ Thiêm bên sông Sài Gòn",
     "content": "Đề xuất xây dựng công viên điện ảnh Thủ Thiêm bên sông Sài Gòn vừa được giới thiệu với 7 phân khu trên diện tích khoảng 5 ha, nhằm tạo điểm đến văn hóa và du lịch tại TP HCM. Công viên bao gồm các khu vực như phim trường, bảo tàng điện ảnh, khu thương mại và sân khấu sự kiện. Dự án được phát triển theo ba giai đoạn, với mục tiêu tái hiện bối cảnh Sài Gòn đầu thế kỷ 20 và nâng cao trải nghiệm du lịch văn hóa tại khu vực trung tâm.",
     "link": "https://vnexpress.net/de-xuat-lam-cong-vien-dien-anh-thu-thiem-ben-song-sai-gon-4860704.html",
@@ -3825,6 +3852,33 @@
     ]
   },
   {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -3851,33 +3905,6 @@
       },
       {
         "text": "Đau bụng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
