Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Công an xử phạt 3 người đăng tin sai sự thật về cơ quan thuế",
+    "content": "Công an TP Hà Nội đã xử phạt ba cá nhân vì đã đăng tải thông tin sai sự thật về hoạt động của cơ quan thuế trên mạng xã hội. Mỗi người bị phạt 5 triệu đồng và đã nhận thức được hành vi vi phạm, tự nguyện gỡ bỏ các nội dung sai sự thật. Công an khuyến cáo người dân cần thận trọng khi chia sẻ thông tin trên mạng để tránh gây hoang mang dư luận và ảnh hưởng đến quyền lợi hợp pháp của các tổ chức, cá nhân.",
+    "link": "https://tuoitre.vn/cong-an-xu-phat-3-nguoi-dang-tin-sai-su-that-ve-co-quan-thue-2025031310150785.htm",
+    "cat": "phap-luat",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao ba người bị xử phạt bởi Công an TP Hà Nội?",
+    "answers": [
+      {
+        "text": "Vì đăng tải tin sai sự thật về cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Vì không đóng thuế đúng hạn.",
+        "correct": false
+      },
+      {
+        "text": "Vì gây rối trật tự công cộng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giấy phép kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thanh niên vào khu công nghiệp, tàu xa bờ phải nằm bờ",
     "content": "Nhiều tàu cá tại cảng Đông Tác (Phú Yên) đang trong tình trạng nằm bờ do thiếu thuyền viên. Nguyên nhân chính là giới trẻ ngày càng ít tham gia nghề đánh bắt ngoài khơi, chủ yếu vì họ chọn công việc trong các khu công nghiệp. Nhiều chủ tàu cho biết họ phải chật vật tìm kiếm bạn thuyền, thậm chí phải ứng trước tiền để thu hút ngư dân, nhưng vẫn gặp khó khăn trong việc tuyển đủ thuyền viên.",
     "link": "https://tuoitre.vn/thanh-nien-vao-khu-cong-nghiep-tau-xa-bo-phai-nam-bo-20250313013531336.htm",
@@ -3879,6 +3906,33 @@
     ]
   },
   {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -3905,33 +3959,6 @@
       },
       {
         "text": "Đau bụng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -4504,60 +4531,6 @@
       },
       {
         "text": "Học bổng chính phủ Nhật Bản",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bán ô tô ế ẩm nên làm liều",
-    "content": "Trong bối cảnh kinh doanh ô tô gặp khó khăn, một cá nhân tại Hà Nội đã đăng tải thông tin sai lệch về Nghị định số 168/2024/NĐ-CP của Chính phủ nhằm thu hút sự chú ý và tăng doanh số bán hàng. Hành động này đã bị cơ quan chức năng phát hiện và xử phạt với mức phạt 7,5 triệu đồng. Công an khuyến cáo người dân cần thận trọng khi chia sẻ thông tin trên mạng xã hội để tránh những vi phạm pháp luật.",
-    "link": "https://tuoitre.vn/ban-o-to-e-am-nen-lam-lieu-2025031210222744.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 6,
-    "question": "Tại sao N.V.N. bị phạt 7,5 triệu đồng?",
-    "answers": [
-      {
-        "text": "Đăng thông tin sai lệch về Nghị định số 168",
-        "correct": true
-      },
-      {
-        "text": "Kinh doanh ô tô không hiệu quả",
-        "correct": false
-      },
-      {
-        "text": "Vi phạm giao thông nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Đăng tải thông tin không có nguồn gốc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người trẻ Hà Nội đổ xô đi chụp hoa sưa nở rộ",
-    "content": "Người trẻ Hà Nội đang đổ xô đến chụp ảnh hoa sưa nở rộ tại các điểm nổi tiếng như phố Ngọc Hà, quận Ba Đình. Hoa sưa, với cành hoa trắng nổi bật, thường nở vào cuối tháng 2 và đầu tháng 3, thu hút đông đảo người yêu thích chụp ảnh. Tại quán cà phê trên phố Ngọc Hà, lượng khách tăng mạnh, với trung bình 400 lượt khách mỗi ngày, nhiều người đến để không bỏ lỡ mùa hoa nở.",
-    "link": "https://vnexpress.net/nguoi-tre-ha-noi-do-xo-di-chup-hoa-sua-no-ro-4860052.html",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao người trẻ Hà Nội lại đổ xô đi chụp hoa sưa?",
-    "answers": [
-      {
-        "text": "Vì hoa sưa nở rộ và đẹp mắt.",
-        "correct": true
-      },
-      {
-        "text": "Vì hoa sưa có màu sắc đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Vì đây là một hoạt động thể thao thú vị.",
-        "correct": false
-      },
-      {
-        "text": "Vì hoa sưa chỉ nở vào mùa hè.",
         "correct": false
       }
     ]
