Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,33 @@
     ]
   },
   {
+    "title": "Khách hàng mua xe điện Xiaomi SU7 phải chờ một năm",
+    "content": "Khách hàng đặt mua xe điện Xiaomi SU7 Pro sẽ phải chờ đợi khoảng 43-46 tuần, tương đương gần một năm, do nhu cầu cao và vấn đề về năng lực sản xuất. Phiên bản SU7 Ultra có thời gian chờ ngắn hơn, từ 3-4 tháng, trong khi các phiên bản khác như SU7 Standard và SU7 Max cũng có thời gian chờ từ 7,5 đến 10 tháng. Xiaomi đang nỗ lực tăng cường sản xuất để đáp ứng nhu cầu và đã đặt mục tiêu giao 300.000 xe trong năm nay.",
+    "link": "https://vnexpress.net/khach-hang-mua-xe-dien-xiaomi-su7-phai-cho-mot-nam-4860686.html",
+    "cat": "oto-xe-may",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao khách hàng mua xe điện Xiaomi SU7 Pro phải chờ lâu như vậy?",
+    "answers": [
+      {
+        "text": "Do nhu cầu cao và vấn đề về năng lực sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe chưa được sản xuất.",
+        "correct": false
+      },
+      {
+        "text": "Do lỗi kỹ thuật trong quá trình lắp ráp.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe không được ưa chuộng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thanh niên vào khu công nghiệp, tàu xa bờ phải nằm bờ",
     "content": "Nhiều tàu cá tại cảng Đông Tác (Phú Yên) đang trong tình trạng nằm bờ do thiếu thuyền viên. Nguyên nhân chính là giới trẻ ngày càng ít tham gia nghề đánh bắt ngoài khơi, chủ yếu vì họ chọn công việc trong các khu công nghiệp. Nhiều chủ tàu cho biết họ phải chật vật tìm kiếm bạn thuyền, thậm chí phải ứng trước tiền để thu hút ngư dân, nhưng vẫn gặp khó khăn trong việc tuyển đủ thuyền viên.",
     "link": "https://tuoitre.vn/thanh-nien-vao-khu-cong-nghiep-tau-xa-bo-phai-nam-bo-20250313013531336.htm",
@@ -157,6 +184,33 @@
       },
       {
         "text": "Vì chị H. đầu tư vào một công ty không rõ ràng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khu du lịch giữa hồ Trị An bị phạt 1,5 tỷ đồng về môi trường",
+    "content": "Khu du lịch đảo Ó - Đồng Trường, nằm giữa hồ Trị An, đã bị UBND tỉnh Đồng Nai xử phạt 1,5 tỷ đồng do không có giấy phép môi trường và báo cáo thẩm định tác động. Ngoài việc phạt tiền, khu du lịch này còn bị yêu cầu ngưng hoạt động trong 4,5 tháng và tháo dỡ các công trình trái phép xả thải. Khu du lịch đã được đầu tư lớn nhưng hiện đang gặp nhiều vấn đề về quản lý và bảo vệ môi trường.",
+    "link": "https://vnexpress.net/khu-du-lich-giua-ho-tri-an-bi-phat-1-5-ty-dong-ve-moi-truong-4860685.html",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Khu du lịch đảo Ó - Đồng Trường bị phạt vì lý do gì?",
+    "answers": [
+      {
+        "text": "Không có giấy phép môi trường",
+        "correct": true
+      },
+      {
+        "text": "Không đủ vốn đầu tư",
+        "correct": false
+      },
+      {
+        "text": "Không có khách du lịch",
+        "correct": false
+      },
+      {
+        "text": "Không xây dựng đúng quy hoạch",
         "correct": false
       }
     ]
@@ -2507,33 +2561,6 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
-    "answers": [
-      {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
-        "correct": false
-      },
-      {
-        "text": "Rau củ quả không có tác dụng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -2556,6 +2583,33 @@
       },
       {
         "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "answers": [
+      {
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "correct": false
+      },
+      {
+        "text": "Rau củ quả không có tác dụng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
@@ -3686,33 +3740,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -3735,6 +3762,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -3906,33 +3960,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -3959,6 +3986,33 @@
       },
       {
         "text": "Đau bụng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -4446,33 +4500,6 @@
       },
       {
         "text": "Xe hybrid thông thường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khu đô thị 381 ha bỏ hoang hơn chục năm",
-    "content": "Khu đô thị Golden Hills City, rộng 381 ha ven sông Cu Đê, đã bị bỏ hoang hơn chục năm do vướng mắc pháp lý và vi phạm trong thủ tục giao đất. Dự án được cấp giấy chứng nhận vào năm 2010 với tổng mức đầu tư hơn 4.440 tỷ đồng, nhưng đã gặp phải nhiều vấn đề pháp lý nghiêm trọng dẫn đến tình trạng lãng phí tài nguyên đất đai. Mặc dù chủ đầu tư đã cố gắng gỡ vướng và xin phép điều chỉnh tiến độ dự án, nhưng dự án vẫn chưa thể tái khởi động, khiến khu vực này ngày càng xuống cấp và trở thành nơi chăn thả gia súc.",
-    "link": "https://vnexpress.net/khu-do-thi-381-ha-bo-hoang-hon-chuc-nam-4860077.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 7,
-    "question": "Tại sao khu đô thị Golden Hills City lại bị bỏ hoang hơn chục năm?",
-    "answers": [
-      {
-        "text": "Do vướng mắc pháp lý và vi phạm trong thủ tục giao đất.",
-        "correct": true
-      },
-      {
-        "text": "Vì thiếu nguồn vốn đầu tư.",
-        "correct": false
-      },
-      {
-        "text": "Do không có nhu cầu về nhà ở.",
-        "correct": false
-      },
-      {
-        "text": "Vì chủ đầu tư không đủ khả năng thực hiện dự án.",
         "correct": false
       }
     ]
